--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/datetimepicker": "8.0.1",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/native": "^6.1.18",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
@@ -26,7 +27,7 @@
     "expo-image": "~1.13.0",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
-    "expo-router": "~3.5.23",
+    "expo-router": "~3.5.24",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -40,7 +41,7 @@
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-screens": "^4.6.0",
     "react-native-web": "~0.19.10",
     "zustand": "^5.0.1"
   },
