--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "^4.6.0",
     "react-native-web": "~0.19.10",
-    "zustand": "^5.0.1"
+    "zustand": "^5.0.1",
+    "expo-image-picker": "~15.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
