--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-native-screens": "^4.6.0",
     "react-native-web": "~0.19.10",
     "zustand": "^5.0.1",
-    "expo-image-picker": "~15.1.0"
+    "expo-image-picker": "~15.1.0",
+    "expo-secure-store": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
