--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "axios": "^1.7.7",
+    "cloudinary": "^2.6.0",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-image": "~1.13.0",
+    "expo-image-picker": "~15.1.0",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
     "expo-router": "~3.5.24",
+    "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -43,9 +47,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "^4.6.0",
     "react-native-web": "~0.19.10",
-    "zustand": "^5.0.1",
-    "expo-image-picker": "~15.1.0",
-    "expo-secure-store": "~13.0.2"
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
