--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/datetimepicker": "8.0.1",
@@ -36,8 +37,9 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "firebase": "^11.6.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.74.5",
     "react-native-calendars": "^1.1306.0",
     "react-native-gesture-handler": "~2.16.1",
@@ -46,7 +48,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "^4.6.0",
-    "react-native-web": "~0.19.10",
+    "react-native-web": "^0.19.13",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
