--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
-    "@react-native-picker/picker": "^2.11.0",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "axios": "^1.7.7",
     "cloudinary": "^2.6.0",
-    "expo": "~51.0.28",
+    "expo": "~51.0.39",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-image": "~1.13.0",
@@ -47,7 +47,7 @@
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "^4.6.0",
+    "react-native-screens": "3.31.1",
     "react-native-web": "^0.19.13",
     "zustand": "^5.0.1"
   },
