--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
+    "@teovilla/react-native-web-maps": "^0.9.5",
     "axios": "^1.7.7",
     "cloudinary": "^2.6.0",
     "expo": "~51.0.39",
@@ -49,6 +50,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "^0.19.13",
+    "react-native-web-maps": "^0.3.0",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
